<resources>
    <string name="app_name">Match&amp;Trip</string>
    <string name="european_dream_10_days">European Dream (10 Days)</string>
    <string name="match_and_trip">Match &amp; Trip</string>
    <string name="discover_the_world_together">Discover the world together</string>
    <string name="join">Join</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="your_password_must_be_8_20_characters">Your password must be 8-20 characters</string>
    <string name="passwordd">Password</string>
    <string name="email_adress">Email Adress</string>
    <string name="log_in">LOG IN</string>
    <string name="first_name">First NAME</string>
    <string name="profile">Profile</string>
    <string name="nname">Name</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="lastname">Last Name</string>
    <string name="aage">Age</string>
    <string name="age">Age</string>
    <string name="eemail">Email</string>
    <string name="email">Email</string>
    <string name="ppassword">Password</string>
    <string name="password">Password</string>
    <string name="about_me">About me</string>
    <string name="my_trips">My trips</string>
    <string name="edit">Edit</string>
    <string name="last_name">Last Name</string>
    <string name="i_have_read_the_terms_and_conditions">I have read the Terms and Conditions</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="llog_in">Log In</string>
    <string name="tour_operator_contiki_age_18_to_35_operated_in_english_group_size_30">Tour Operator: Contiki Age:18 to 35 Operated in: English Group size: 30</string>
    <string name="start_and_end_in_koh_samui_with_the_beach_tour_thai_island_hopper_east_9_days_you_have_a_9_days_tour_package_taking_you_through_koh_samui_thailand_and_2_other_destinations_in_thailand">Start and end in Koh Samui! With the Beach tour Thai Island Hopper East (9 Days), you have a 9 days tour package taking you through Koh Samui, Thailand and 2 other destinations in Thailand.</string>
    <string name="what_is_your_current_location">What is your current location?</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ad_photos_to_the_trip">Ad photos to the trip</string>
    <string name="agregar">agregar</string>
    <string name="add_a_description_to_the_trip">Add a description to the trip</string>
    <string name="guardar">Guardar</string>
    <string name="welcome_back_cesk_where_you_want_to_go">Welcome back Cesk, where you want to go?</string>
    <string name="hello_cesk">Hello Cesk</string>
    <string name="trip_type">Trip Type</string>
    <string name="start_a_trip">Start a trip</string>
    <string name="welcome_back_where_you_want_to_go">Welcome back where you want to go?</string>
    <string name="trip_name">Trip Name</string>
    <string name="add_a_itinerary">Add a itinerary</string>
    <string name="add_photos_and_a_little_description_for_photos">Add photos and a little description for photos</string>
    <string name="add_photos">Add Photos</string>
    <string name="_12_jul_2021_21_jul_2021">12 Jul 2021 - 21 Jul 2021</string>
    <string name="itinerary">Itinerary</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="new_trip">New Trip</string>
    <string name="intro">Intro</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>


</resources>