<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/createuser"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/NewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="Create new account"
        android:textColor="#030E69"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/first_name"
        android:textColor="#030E69"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/EditTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:background="#2C010309"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/last_name"
        android:textColor="#030E69"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/EditTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:background="#2C010309"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/email_adress"
        android:textColor="#030E69"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:background="#2C010309"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/password"
        android:textColor="#030E69"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:background="#2C010309"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:background="#2C010309"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/your_password_must_be_8_20_characters"
        android:textColor="#030E69" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/i_have_read_the_terms_and_conditions"
        android:textColor="#030E69" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up_now"
        app:backgroundTint="#030E69" />

    <TextView
        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/have_an_account"
        android:textColor="#030E69" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/sign_in"
        app:backgroundTint="#030E69" />


</LinearLayout>