<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/log_in"
        android:textColor="#030E69"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/email_adress"
        android:textColor="#030E69"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:background="#2C010309"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/profilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/password"
        android:textColor="#030E69"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:background="#2C010309"
        android:inputType="textPassword" />


    <CheckBox
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="Remember me?"
        android:textColor="#030E69" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:text="@string/llog_in" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="or"
        android:textColor="#030E69" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/login_with_facebook" />

    <Button
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/login_with_google"
        app:iconTint="#030E69" />

    <TextView
        android:id="@+id/orCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/or"
        android:textColor="#030E69" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="create" />


</LinearLayout>