<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/user">

    <TextView
        android:id="@+id/userProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/profile"
        android:textColor="#030E69"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photoUser"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfile"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/name"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileFirstName"
        app:layout_constraintEnd_toStartOf="@+id/profileFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileFirstName" />

    <TextView
        android:id="@+id/profileFirstName"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="#B1C6D6"
        android:fontFamily="@font/aclonica_regular"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/photoUser"
        app:layout_constraintTop_toBottomOf="@+id/aboutMe" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/last_name"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileLastName"
        app:layout_constraintEnd_toStartOf="@+id/profileLastName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileLastName" />

    <TextView
        android:id="@+id/profileLastName"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#B1C6D6"
        android:fontFamily="@font/aclonica_regular"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/profileFirstName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/age"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileAge"
        app:layout_constraintEnd_toStartOf="@+id/profileAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileAge" />

    <TextView
        android:id="@+id/profileAge"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#B1C6D6"
        android:fontFamily="@font/aclonica_regular"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profilePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/profileLastName" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/password"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/profilePassword"
        app:layout_constraintEnd_toStartOf="@+id/profilePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePassword" />

    <TextView
        android:id="@+id/profilePassword"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#B1C6D6"
        android:fontFamily="@font/aclonica_regular"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logInEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/profileAge" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/aclonica_regular"
        android:text="@string/email"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/logInEmail"
        app:layout_constraintEnd_toStartOf="@+id/logInEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logInEmail" />

    <TextView
        android:id="@+id/logInEmail"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:background="#B1C6D6"
        android:fontFamily="@font/aclonica_regular"
        android:textColor="#030E69"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/profilePassword" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:gravity="center"
        android:text="@string/about_me"
        android:textColor="#030E69"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/photoUser"
        app:layout_constraintTop_toTopOf="@+id/photoUser" />

    <TextView
        android:id="@+id/aboutMe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#B1C6D6"
        android:fontFamily="@font/aclonica_regular"
        android:textColor="#030E69"
        app:layout_constraintBottom_toBottomOf="@+id/photoUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/photoUser"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <Button
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/edit_profile"
        android:textColor="#030E69"
        app:backgroundTint="#0D7AF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logInEmail"
        app:layout_constraintTop_toBottomOf="@+id/logInEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>